TODO
    defaultconfig.php?
    translation-hints
    uploader localization from back-end
    update to newest Plupload/jquery

Version 1alpha3 - released 2012-02-04
cmb	fixed bug: plugin back-end was always displayed, when register_globals is on (reported by Tata)
cmb	made minor cosmetic changes
cmb	extended copyright to 2012
cmb	prohibited direct access to init.php
cmb	implemented system check
cmb	added plugin icon
cmb	updated manual
cmb	prohibited upload to parent folders

Version 1alpha2 - released 2012-03-29
cmb	fixed bug: changing the selectbox was not possible under IE (reported by wolfgang_58)

Version 1alpha1 - released 2011-12-05
cmb	initial release