@@ -125,6 +125,8 @@ The uploader script processes three query parameters:</p>
 <p>init.php is licensed under
 <a href="http://www.opensource.org/licenses/mit-license.php">MIT License</a>.</p>
 <p>&copy; 2011-2012 Christoph M. Becker</p>
+<p>Slovak translation &copy; 2012 Dr. Martin Sereday<br>
+Czech translation &copy; 2012 Josef N&#283;mec</p>
 <div class="toplink"><a href="#">back to top</a></div>
 
 <h2><a name="credits">Credits</a></h2>
