@@ -1,0 +1,30 @@
+<?php
+
+$plugin_tx['uploader']['utf-8-marker']="äöüßě";
+$plugin_tx['uploader']['menu_main']="Upload";
+$plugin_tx['uploader']['title_images']="Obrázky";
+$plugin_tx['uploader']['title_downloads']="Soubory ke stažení";
+$plugin_tx['uploader']['title_media']="Mediální soubory";
+$plugin_tx['uploader']['title_userfiles']="Uživatelské soubory";
+$plugin_tx['uploader']['label_type']="Typ";
+$plugin_tx['uploader']['label_subdir']="Podadresáře";
+$plugin_tx['uploader']['label_resize']="Změnit velikost";
+$plugin_tx['uploader']['cf_resize-small_width']="Maximální šířka pro změnu malých.";
+$plugin_tx['uploader']['cf_resize-small_height']="Maximální výška pro změnu malých";
+$plugin_tx['uploader']['cf_resize-small_quality']="Kvalita pro změnu malých.";
+$plugin_tx['uploader']['cf_resize-medium_width']="Maximální šířka pro změnu středních";
+$plugin_tx['uploader']['cf_resize-medium_height']="Maximální výška pro změnu středních";
+$plugin_tx['uploader']['cf_resize-medium_quality']="Kvalita pro změnu středních.";
+$plugin_tx['uploader']['cf_resize-large_width']="Maximální šířka pro změnu velkých.";
+$plugin_tx['uploader']['cf_resize-large_height']="Maximální výška pro změnu velkých.";
+$plugin_tx['uploader']['cf_resize-large_quality']="Kvalita pro změnu velkých.";
+$plugin_tx['uploader']['cf_size_max']="Maximální velikost souborů, které chcete vybrat. Údaj může být ve formátu 100b, 10kb, 10mb.";
+$plugin_tx['uploader']['cf_size_chunk']="Umožňuje pracovat s obrázkem v malých částech, např. pokud má PHP nastavenu maximální velikost odesílaného souboru 1MB, soubor o velikosti 10MB můžete takto rozdělit na 10 častí. Funkci můžete zrušit, pokud necháte údaj prázdný.";
+$plugin_tx['uploader']['cf_ext_images']="Uveďte čárkou oddělený seznam přípon souború, které budou uploadovany do adresáře s obrázky.";
+$plugin_tx['uploader']['cf_ext_downloads']="Uveďte čárkou oddělený seznam přípon souború, které budou uploadovany do adresáře downloads..";
+$plugin_tx['uploader']['cf_ext_media']="Uveďte čárkou oddělený seznam přípon souború, které budou uploadovány do adresáře média. (CMSimple_XH 1.5 a novější).";
+$plugin_tx['uploader']['cf_ext_userfiles']="Uveďte čárkou oddělený seznam přípon souborů, které budou uploadovany do adresáře s uživatelskými soubory.";
+$plugin_tx['uploader']['cf_runtimes']="Uveďte čárkou oddělený seznam runtin, které se mají spustit při inicializaci uploaderu. Ten se pokusí inicializovat každou rutinu, aby v případě, že některá selže, mohl pokračovat s další rutinou.";
+$plugin_tx['uploader']['cf_utf-8-marker']="Pouze pro interní použití. <strong>NEMĚNIT</strong>";
+
+?>
