@@ -1,0 +1,37 @@
+<?php
+
+/*
+ * Copyright (c) 2012 Dr. Martin Sereday - www.cmsimple.sk - info(at)cmsimple.sk
+ *
+ * This work is licensed under a Creative Commons Attribution 3.0 Unported
+ * License.
+ */
+
+$plugin_tx['uploader']['utf-8-marker']="äöüßľščťžýáíéňôß";
+$plugin_tx['uploader']['menu_main']="Upload";
+$plugin_tx['uploader']['title_images']="Obrázky";
+$plugin_tx['uploader']['title_downloads']="Súbory na stiahnutie";
+$plugin_tx['uploader']['title_media']="Mediálne súbory";
+$plugin_tx['uploader']['title_userfiles']="Užívateľské súbory";
+$plugin_tx['uploader']['label_type']="Typ";
+$plugin_tx['uploader']['label_subdir']="Podadresáre";
+$plugin_tx['uploader']['label_resize']="Zmeniť veľkosť";
+$plugin_tx['uploader']['cf_resize-small_width']="Maximálna šírka pre zmeny malých.";
+$plugin_tx['uploader']['cf_resize-small_height']="Maximálna výška pre zmeny malých.";
+$plugin_tx['uploader']['cf_resize-small_quality']="Kvalita pre zmeny malých.";
+$plugin_tx['uploader']['cf_resize-medium_width']="Maximálna šírka pre zmeny stredných.";
+$plugin_tx['uploader']['cf_resize-medium_height']="Maximálna výška pre zmeny stredných.";
+$plugin_tx['uploader']['cf_resize-medium_quality']="Kvalita pre zmeny stredných.";
+$plugin_tx['uploader']['cf_resize-large_width']="Maximálna šírka pre zmeny veľkých.";
+$plugin_tx['uploader']['cf_resize-large_height']="Maximálna výška pre zmeny veľkých.";
+$plugin_tx['uploader']['cf_resize-large_quality']="Kvalita pre veľké veľkých.";
+$plugin_tx['uploader']['cf_size_max']="Maximálna veľkosť súborov, ktoré chcete vybrať. Údaj môže byť vo formáte 100b, 10kb, 10mb.";
+$plugin_tx['uploader']['cf_size_chunk']="Umožňuje pracovať s obrázkom v malých častiach, napr. ak PHP má nastavenú maximálnu veľkosť odosielaného súboru 1MB, súbor o veľkosti 10MB môžete takto rozdeliť na 10 častí. Funkciu môžete zrušiť, ak necháte údaj prázdny, leave this option empty.";
+$plugin_tx['uploader']['cf_ext_images']="Uveďte čiarkou oddelený zoznam prípon súborov, ktoré budú uploadované do adresára s obrázkami.";
+$plugin_tx['uploader']['cf_ext_downloads']="Uveďte čiarkou oddelený zoznam prípon súborov, ktoré budú uploadované do adresára na stiahnutie.";
+$plugin_tx['uploader']['cf_ext_media']="Uveďte čiarkou oddelený zoznam prípon súborov, ktoré budú uploadované do adresára pre médiá. (CMSimple_XH 1.5 a novšie).";
+$plugin_tx['uploader']['cf_ext_userfiles']="Uveďte čiarkou oddelený zoznam prípon súborov, ktoré budú uploadované do adresára s užívateľskými súbormi.";
+$plugin_tx['uploader']['cf_runtimes']="Uveďte čiarkou oddelený zoznam runtin, ktoré sa majú spustiť pri inicializácii uploadera. Tento sa pokúci inicializovať každú rutinu, aby v prípade, že niektorá zlyhá, mohol pokračovať s ďalšou rutionou.";
+$plugin_tx['uploader']['cf_utf-8-marker']="Iba pre vnútorné použitie. <strong>Nič nemeňte!</strong>";
+
+?>
