@@ -13,6 +13,8 @@ cmb	implemented system check
 cmb	added plugin icon
 cmb	updated manual
 cmb	prohibited upload to parent folders
+cmb	added slovak translation (contributed by Tata)
+cmb	added czech translations (contributed by oldnema)
 
 Version 1alpha2 - released 2012-03-29
 cmb	fixed bug: changing the selectbox was not possible under IE (reported by wolfgang_58)
